<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.score.ScoreFragment" >

        <TextView
            android:id="@+id/tv_you_scored"
            android:layout_width="@dimen/_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="@dimen/_16"
            android:text="@string/you_scored"
            android:textAlignment="center"
            android:textSize="@dimen/_16f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_score_value"
            android:layout_width="@dimen/_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/score_value"
            android:textAlignment="center"
            android:textSize="@dimen/_30f"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_you_scored"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_you_scored"
            app:layout_constraintTop_toBottomOf="@+id/tv_you_scored" />

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_you_scored"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/tv_you_scored"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_value"
            app:layout_constraintVertical_bias="0.815" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
